# omni-memory

./: .dockerignore  .env.example  .env.prod  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  facts.json  notes.md  omni-memory.code-workspace  pyproject.toml
.github/workflows/: ci.yml
.omni-memory/: facts.json
app/: admin.py  agent_cycle.py  api_v1.py  builder.py  cli.py  config.py  consolidation.py  context_builder.py  decision_auto_draft.py  development_cycle.py  development_memory_workflow.py  embeddings.py  entities.py  export_import.py  fact_maintenance.py  fact_mining.py  logging.py  main.py  mcp_server.py  memory.py  memory_commands.py  memory_hygiene.py  memory_planner.py  memory_repositories.py  metrics.py  middlewares.py  ops_cycle.py  ops_memory_workflow.py  orchestrator.py  profiling.py  prompting.py  ratelimit.py  retriever.py  review_queue.py  runtime_cli.py  security.py  session_distillation.py  stats.py  telemetry.py  tokenizer.py  (+2 more)
app/integrations/: fact_mining_mcp.py  langchain.py  langchain_protocols.py  langchain_schemas.py  langgraph.py  mcp.py  mcp_registry.py
app/services/: answer_chain.py  answering.py  simple_answer_pipeline.py
app/writeback/: memory_policies.py  service.py  writeback_policies.py
benchmarks/: __init__.py
benchmarks/dev_agent/: README.md  __init__.py  agent_graph.py  cases.jsonl  local_llm.py  patch_runner.py  repo_runner.py  run.py  scoring.py
benchmarks/memory_eval/: README.md  report.py  run_benchmark.py  scoring.py
data/vdb/: ids.json  index.faiss  meta.json  store.json
docs/: architecture.md  coding_agent_memory.md  demo_end_to_end.md  local_persistence.md  memory_persistence.md  quickstart_mcp.md  release_checklist.md  security.md  stability.md
domain/: distiller.py  experience_evaluator.py  llm.py  model_ports.py  models.py  policy.py  ports.py  repositories.py  working_memory.py  writeback.py
eval/datasets/: conflict_cases.jsonl  developer_assistant_cases.jsonl  preference_cases.jsonl
eval/metrics/: scoring.py
eval/reports/: baseline_latest.md  baseline_results.jsonl  latest.md  omni_memory_latest.md  omni_memory_results.jsonl
eval/runners/: run_baseline_rag.py  run_omni_memory.py
examples/: conflict_demo.py  langchain_tools.py  langgraph_agent_memory.py
examples/support/: conflict_demo_tools.py
export/: dump.json
infra/: consistency.py  episodic_repo.py  exceptions.py  graph_repo.py  llm_factory.py  llm_ollama.py  llm_openai.py  metrics.py  vector_repo.py
infra/db/: __init__.py  audit_repo.py  models.py  session.py
infra/distillers/: factory.py  rule_based.py  session_llm.py
infra/embeddings/: factory.py
migrations/: env.py
samples/: alice.json  alice_episode.json  alice_facts.json  notes.md
tests/: test_answer_chain.py  test_api_smoke.py  test_byom_model_bundle.py  test_cli_smoke.py  test_cognitive_memory.py  test_cognitive_persist.py  test_config_groups.py  test_consistency.py  test_consolidation_hardening.py  test_context_budget.py  test_context_budget_tokenizer.py  test_decision_auto_draft.py  test_development_cycle.py  test_domain_imports.py  test_embeddings_hash_smoke.py  test_entities.py  test_episodic_repo.py  test_experience_evaluator.py  test_export_import.py  test_export_import_smoke.py  test_fact_mining.py  test_fact_mining_mcp.py  test_gc_and_dedup.py  test_graph_backend.py  test_graph_repo.py  test_graph_repo_index.py  test_healthz.py  test_langchain_integration.py  test_langchain_integration_contracts.py  test_langgraph_integration.py  test_llm_provider_mock.py  test_logging_smoke.py  test_mcp_server.py  test_memory_hygiene.py  test_memory_request_dataclasses.py  test_metrics_smoke.py  test_ops_cycle.py  test_orchestrator.py  test_policy.py  test_profiling_timers.py  (+22 more)
tools/: eval_answer.py  loadtest_answer.py
(+128 files in other folders)
