[project]
name = "omni-memory"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton Prusakov",email = "a.prusacov@vendroomai.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "networkx (>=3.5,<4.0)"
]
[tool.poetry.dependencies]
python = ">=3.12,<3.15"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
mypy = "^1.17.1"
ruff = "^0.12.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["infra/gen"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true