[tool.poetry]
name = "omni-memory"
version = "0.1.0"
description = "Omni-memory MVP"
authors = ["Bolt Hold <you@example.com>"]

# Явно указываем пакеты
packages = [
  { include = "app" },
  { include = "domain" },
  { include = "infra" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
faiss-cpu = "^1.12.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
httpx = "^0.28.1"
numpy = "^2.3.2"
networkx = "^3.5"
typer = { version = "^0.17.4", extras = ["all"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
mypy = "^1.17.1"
ruff = "^0.12.12"

[tool.poetry.scripts]
omem = "app.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["infra/gen"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
