[tool.poetry]
name = "omni_memory"
version = "0.1.0"
description = "Omni-memory MVP"
authors = ["Bolt Hold <you@example.com>"]

# Явно указываем пакеты
packages = [
  { include = "app" },
  { include = "domain" },
  { include = "infra" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
httpx = "^0.28.1"
numpy = "<2.0"
networkx = "^3.5"
typer = { version = "^0.17.4", extras = ["all"] }
pydantic-settings = "^2.10.1"
sentence-transformers = ">=2.7.0,<3.0.0"
spacy = "<3.8"
tiktoken = ">=0.7,<0.8"
openai = "^1.106.1"
jinja2 = ">=3.1,<4.0"
py-spy = "^0.4.1"
starlette = "^0.47.3"
prometheus-client = "^0.22.1"
faiss-cpu = "^1.13.2"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg = { version = "^3.2.3", extras = ["binary"] }
mcp = "<1.28"
opentelemetry-sdk = "^1.43.0"
opentelemetry-exporter-otlp = "^1.43.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
mypy = "^1.17.1"
ruff = "^0.12.12"
pytest-cov = "^7.1.0"

[tool.poetry.group.langchain]
optional = true

[tool.poetry.group.langchain.dependencies]
langchain-core = ">=0.3,<1.0"
langgraph = ">=0.2,<1.0"

[tool.poetry.scripts]
omem = "app.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["infra/gen"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true


[tool.pytest.ini_options]
markers = [
    "llm_benchmark: requires a local LLM provider and is skipped unless explicitly enabled",
    "ollama: requires a local Ollama server",
]
filterwarnings = [
    "ignore::DeprecationWarning:faiss.*",
    "ignore::DeprecationWarning:spacy.*",
    "ignore::DeprecationWarning:weasel.*",
]
